# dockerlearn

./: .env.prod  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
services/kafka/: Dockerfile  adminconfig.properties  consumer.properties  kafka_server_jaas.conf  notes.md  server.properties
services/nginx/: Dockerfile  nginx.conf  servers.conf
services/web/: Dockerfile  Dockerfile.prod  entrypoint.sh  manage.py  requirements.txt
services/web/project/: __init__.py  config.py
services/web/sourceCode/: CMakeLists.txt  kafkaproxy.cpp  main.cpp  testlib.cpp
